<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin2"
        android:layout_marginRight="@dimen/page_margin2"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/bottom_margin_instruction"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/choose_payment_method"
            style="@style/main_instructions" />

        <TextView
            android:text="@string/fill_out_the_information_below_to_complete_you_order"
            android:layout_marginBottom="@dimen/bottom_margin_instruction"
            style="@style/sub_instructions" />

        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/card_type" />
        <RadioGroup
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/credit"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSelectRadioButton"
                android:text="@string/credit" />
            <RadioButton
                android:layout_weight="1"
                android:id="@+id/debit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSelectRadioButton"
                android:text="@string/debit" />
        </RadioGroup>

        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/card_number" />

        <EditText
            android:id="@+id/cc_number"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/cc_placeholder"
            android:inputType="number"
            android:maxLength="16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/checkout_text_view_style"
                    android:text="@string/cvv_cvc" />

                <EditText
                    android:id="@+id/cvv_number"
                    style="@style/edit_text"
                    android:autofillHints=""
                    android:hint="@string/cvv_place_holder"
                    android:inputType="number"
                    android:maxLength="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/checkout_text_view_style"
                    android:text="@string/expiry_date" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/expiry_month"
                        style="@style/edit_text"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:hint="@string/mm"
                        android:inputType="number"
                        android:maxLength="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="/" />

                    <EditText
                        android:id="@+id/expiry_year"
                        style="@style/edit_text"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:hint="@string/yy"
                        android:inputType="number"
                        android:maxLength="2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/fname"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/enter_your_firstname"
            android:inputType="textPersonName" />

        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/lastname" />
        <EditText
            android:id="@+id/lname"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/enter_your_lastname"
            android:inputType="textPersonName" />
        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phone_number"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone" />


        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/address" />


        <EditText
            android:id="@+id/address"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/enter_your_address"
            android:inputType="textPersonName" />
        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/city" />

        <EditText
            android:id="@+id/city"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/enter_your_city"
            android:inputType="textPersonName" />

        <TextView
            style="@style/checkout_text_view_style"
            android:text="@string/postalcode" />

        <EditText
            android:id="@+id/postal_code"
            style="@style/edit_text"
            android:autofillHints=""
            android:hint="@string/enter_your_postal_code"
            android:inputType="textPersonName" />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:layout_marginTop="@dimen/bottom_margin_instruction"
            android:layout_marginBottom="@dimen/bottom_margin_instruction"
            android:text="Pay" />
    </LinearLayout>

</ScrollView>